--- a/_scss/cart.scss
+++ b/_scss/cart.scss
@@ -296,7 +296,8 @@
 }
 .woocommerce-cart {
 	.cart-shipping-details,
-	.woocommerce-shipping-calculator {
+	.woocommerce-shipping-calculator,
+	.tax-rate {
 		display: none;
 	}
 }
