--- a/_scss/checkout.scss
+++ b/_scss/checkout.scss
@@ -47,3 +47,12 @@
 		}
 	}
 }
+.woocommerce-checkout {
+	&.showModal {
+		opacity: 1;
+		visibility: visible;
+		.modalContent {
+			visibility: visible;
+		}
+	}
+}
