--- a/_scss/store.scss
+++ b/_scss/store.scss
@@ -364,7 +364,7 @@
 }
 .product-type-variable {
 	.product-price {
-		display: none;
+		//display: none;
 	}
 	.quantity_select {
 		margin: 1em 0 !important;
@@ -372,8 +372,8 @@
 }
 /*New Quantity buttons*/
 .quantity.buttons_added {
-	margin: 0.5em 0 1em;
-	padding: 0 0.5em;
+	margin: 0 auto 1em;
+	padding: 0;
 	input[type="button"] {
 		@include button(#aaa, #fff, #aaa);
 		display: block;
@@ -384,11 +384,12 @@
 	input[type="number"] {
 		float: left;
 		display: block;
-		width: 44%;
-		margin: 0 3%;
-		font-size: 1.25em;
+		width: 100%;
+		height: 3em;
+		margin: 0 auto;
+		font-size: 1em;
 		text-align: center;
-		padding: 0.15em 0.5em;
+		padding: 0;
 		border: 1px solid #aaa;
 	}
 	&:after {
