updated custom donation dropdown

--- a/_scss/header.scss
+++ b/_scss/header.scss
@@ -163,7 +163,7 @@
 }
 .nav-buttons {
 	text-align: center;
-	padding: 1.05em 0 0;
+	padding: 0.5em 0 0;
 	.btn {
 		/*margin-right: 0.5em;*/
 	}
@@ -370,6 +370,17 @@
 	        	min-width: 200%;
 	        }
 	    }
+		&.rym-nav {
+			&:before {
+				width: 74% !important;
+				right: -74% !important;
+			}
+			ul {
+				min-width: 200%;
+				border-left: none;
+				left: 0;
+			}
+		}
 	}
 }
 .site-content,
