--- a/_scss/opc.scss
+++ b/_scss/opc.scss
@@ -331,62 +331,64 @@ td.product-name dl.variation dd.variation-SuggestedAmounts {
 
 	}
 }
-.modal,
-.modalVideo {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	visibility: hidden;
-	top: 0;
-	left: 0;
-	z-index: 1000;
-	opacity: 0;
-	background: #fff;
-	background: rgba(249,249,249,0.7);
-	transition: all 0.3s;
-	&:before {
-		height:1em;width:1em;position:absolute;top:50%;left:50%;margin-left:-.5em;margin-top:-.5em;display:block;content:"";-webkit-animation:spin 1s ease-in-out infinite;-moz-animation:spin 1s ease-in-out infinite;animation:spin 1s ease-in-out infinite;background:url(../../plugins/woocommerce/assets/images/icons/loader.svg) center center;background-size:cover;line-height:1;text-align:center;font-size:2em;color:rgba(0,0,0,.75)
-	}
-	.modalContent {
+.woocommerce-checkout {
+	.modal,
+	.modalVideo {
 		position: fixed;
-		top: 50%;
-		left: 50%;
-		width: 50%;
-		max-width: 630px;
-		min-width: 320px;
-		height: auto;
-		z-index: 2000;
+		width: 100%;
+		height: 100%;
 		visibility: hidden;
-		backface-visibility: hidden;
-		transform: translateX(-50%) translateY(-50%);
-
-		svg {
-			display: none;
-			width: 100px;
-			height: 100px;
-			margin: 0 auto;
-			display:block;
+		top: 0;
+		left: 0;
+		z-index: 1000;
+		opacity: 0;
+		background: #fff;
+		background: rgba(249,249,249,0.7);
+		transition: all 0.3s;
+		&:before {
+			height:1em;width:1em;position:absolute;top:50%;left:50%;margin-left:-.5em;margin-top:-.5em;display:block;content:"";-webkit-animation:spin 1s ease-in-out infinite;-moz-animation:spin 1s ease-in-out infinite;animation:spin 1s ease-in-out infinite;background:url(../../plugins/woocommerce/assets/images/icons/loader.svg) center center;background-size:cover;line-height:1;text-align:center;font-size:2em;color:rgba(0,0,0,.75)
 		}
-	}
-	&.showModal {
-		opacity: 1;
-		visibility: visible;
 		.modalContent {
+			position: fixed;
+			top: 50%;
+			left: 50%;
+			width: 50%;
+			max-width: 630px;
+			min-width: 320px;
+			height: auto;
+			z-index: 2000;
+			visibility: hidden;
+			backface-visibility: hidden;
+			transform: translateX(-50%) translateY(-50%);
+
+			svg {
+				display: none;
+				width: 100px;
+				height: 100px;
+				margin: 0 auto;
+				display:block;
+			}
+		}
+		&.showModal {
+			opacity: 1;
 			visibility: visible;
+			.modalContent {
+				visibility: visible;
+			}
 		}
 	}
-}
-.hideModal {
-	position: fixed;
-	bottom: 20%;
-	left: 50%;
-	text-align: center;
-	transform: translateX(-50%);
-	text-transform: uppercase;
-	font-size: 1.2em;
-	color: $text;
-	text-decoration: none;
-	z-index: 2001;
+	.hideModal {
+		position: fixed;
+		bottom: 20%;
+		left: 50%;
+		text-align: center;
+		transform: translateX(-50%);
+		text-transform: uppercase;
+		font-size: 1.2em;
+		color: $text;
+		text-decoration: none;
+		z-index: 2001;
+	}
 }
 .opc-single-product {
 	.quantity input[type="number"] {
