--- a/_homewordplus/section-7.scss
+++ b/_homewordplus/section-7.scss
@@ -48,7 +48,11 @@
         transition: border-color 250ms ease-in-out;
         text-align: center;
         margin-bottom: 2em;
-
+        opacity: 0;
+        transition: opacity 400ms;
+        &.scrolled {
+            opacity: 1;
+        }
         @include bp(62.5) {
             margin-bottom: 0;
         }
@@ -75,11 +79,14 @@
         }
 
         &:nth-of-type(2n) {
+            transition-delay: 500ms;
             &:after {
                 background-color: $orange;
             }
         }  
-
+        &:last-of-type {
+            transition-delay: 800ms;
+        }
         @include bp(44) {
             &:first-of-type {
                 grid-area: topLeft;
